# astro

./: .gitignore  .test_cache_util.json  ARCHITECTURE_DIAGRAMS.md  ASTROLOGY_IMPLEMENTATION_STATUS.md  COMPARATIVE_CHARTS.md  COMPLETION_SUMMARY.md  EXECUTIVE_SUMMARY.md  INPUT_NORMALIZATION_SUMMARY.md  LICENSE  OPTIMIZATION_EXAMPLES.md  PHASE_2_COMPLETION.md  PRIVACY.md  PROJECT_STATUS_COMPLETE.md  PROSERPINA_FINAL_REPORT.md  PROSERPINA_SUMMARY.md  README.md  REMEDIATION_GUIDE.md  STRUCTURE.md  __main__.py  aspects_math.py  astro_adapter.py  cities_sample.txt  comparative_charts.py  conftest.py  core_geometry.py  core_math.py  explain_fix_layer.py  extract_chart.py  graph_layer.py  horary_analysis_lost_item.md  horary_readable.txt  interpretation_layer.py  main.py  natal_rehovot.json  pyproject.toml  pytest.ini  red_team_results.txt  red_team_test.py  requirements.txt  signals_models.py  (+17 more)
config/: dignities.yaml  performance_thresholds.yaml
docs/: AGENT_PLAYBOOK.md  API_CONTRACT.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_COMMERCIAL.md  ASTROLOGY_REVIEW.md  BEFORE_AFTER_SUMMARY.md  CLI_GUIDE.md  DSL_BRAINSTORM.md  FIXES_APPLIED.md  HARDCORE_CODE_REVIEW.md  I18N_GUIDE.md  MONETIZATION.md  NATAL_CHART_19820108.md  NATAL_CHART_19820108_REHOVOT.md  PERFORMANCE_GUIDE.md  PERFORMANCE_MONITORING.md  PHASE_1_COMPLETION.md  PLANNING_PROCESS.md  PRODUCT_STRATEGY.md  PROJECT_STATUS_COMPLETE.md  README.md  RED_TEAM_AUDIT_REPORT.md  RED_TEAM_PRODUCTION_READINESS.md  SCHOOL_MODES.md  SERVER_VS_SERVERLESS.md  SPRINT_BACKLOG.md  STAGE_1_RESULTS.md  STAGE_2_SHORT_TERM.md  SYSTEM_ANALYSIS.md  (+18 more)
(+162 files in other folders)
