[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "astro"
version = "0.1.0"
description = "Professional astrology calculation and interpretation engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "swisseph",
    "pydantic>=2.0",
    "networkx",
    "typer",
    "geopy",
    "tzdata",
    "timezonefinder",
    "dateparser",
    "rapidfuzz",
    "colorama",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
]

[project.scripts]
astro = "main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/test_performance_dsl.py"
